# log2

./: CMakeLists.txt  README.md  def.h  log.cpp  log.h
callstack/: StackWalker.cpp  StackWalker.h  callstack.h  cxxabi_stacktrace.hpp  dbghelp_stacktrace.hpp
example/: CMakeLists.txt  example.cc
